<resources>
    <string name="app_name">My Books</string>
    <string name="your_books">Your Books:</string>
    <string name="title_hint">Title:</string>
    <string name="author_hint">Author:</string>
    <string name="pages_hint">Pages: </string>
    <string name="isbnNumber_hint">ISBN:</string>
    <string name="add_book">Add Book</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="rating">Rating: </string>
</resources>
