<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:hint="@string/title_hint"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_author"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/author_hint"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_pages"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/pages_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_isbnNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/isbnNumber_hint"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:numStars="5"/>

    <Button
        android:id="@+id/btn_addBook"
        android:onClick="postData"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/add_book"
        android:background="@drawable/roundedbutton"/>

</LinearLayout>