<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:hint="@string/title_hint"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_author"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/author_hint"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_pages"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/pages_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_isbnNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/isbnNumber_hint"
        android:ems="10"
        android:inputType="number" />

    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:numStars="5"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_delete"
            android:onClick="deleteData"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="83dp"
            android:layout_marginLeft="83dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/delete"
            android:background="@drawable/roundedbutton"
            app:layout_constraintEnd_toStartOf="@+id/btn_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_update"
            android:onClick="updateData"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="89dp"
            android:layout_marginRight="89dp"
            android:text="@string/save_changes"
            android:background="@drawable/roundedbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>